// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchBar snapshots matches snapshot when empty 1`] = `
<DocumentFragment>
  <div
    class="toolbar"
  >
    <input
      class="input"
      placeholder="Search username…"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`SearchBar snapshots matches snapshot with value 1`] = `
<DocumentFragment>
  <div
    class="toolbar"
  >
    <input
      class="input"
      placeholder="Search username…"
      value="magnus"
    />
  </div>
</DocumentFragment>
`;
